Fix scrolling preview to show scroll bar only on overflow

--- a/app/assets/stylesheets/components/index_card.scss
+++ b/app/assets/stylesheets/components/index_card.scss
@@ -140,7 +140,7 @@ div.user-icon-small {
   .scroll-content {
     height: 121px;
     width: 230px;
-    overflow-y: scroll;
+    overflow-y: auto;
     margin: 34px 0 5px 0;
 
     li {
